kubernetes-debug/kit/daemonset.yaml
---
  apiVersion: "apps/v1"
  kind: "DaemonSet"
  metadata:
    name: "kube-iptables-tailer"
    namespace: "kube-system"
  spec:
    selector:
      matchLabels:
        app: "kube-iptables-tailer"
    template:
      metadata:
        labels:
          app: "kube-iptables-tailer"
      spec:
        serviceAccount: kube-iptables-tailer
        containers:
          - name: "kube-iptables-tailer"
            command:
              - "/kube-iptables-tailer"
            image: "honestica/kube-iptables-tailer:master-100"
            volumeMounts:
              - name: "iptables-logs"
                mountPath: "/var/log"
                readOnly: true
        volumes:
          - name: "iptables-logs"
            hostPath:
              # absolute path of the directory containing iptables log file on your host
              path: "/var/log"
